# Gateway-zk-Embedded

./: .gitattributes  .gitignore  CMakeLists.txt  camera_service_main.cpp  can_driver_main.cpp  compute_engine_main.cpp  dio_driver_main.cpp  direct_agent_main.cpp  dlt645_main.cpp  event_engine_main.cpp  iec_driver_main.cpp  local_display_main.cpp  local_display_qt_ems_main.cpp  local_display_qt_main.cpp  main.cpp  mqtt_driver_main.cpp  qt_display_bridge_main.cpp  system_monitor_direct_maintenance.cpp  system_monitor_main.cpp
build-aarch64/: CMakeCache.txt  CameraService  CanDriver  ComputeEngine  DioDriver  Dlt645Driver  EventEngine  IecDriver  LocalDisplay  Makefile  ModbusRtu  MqttDriver  QtDisplayBridge  SystemMonitor  cmake_install.cmake  pointctl  stress_runner
build-aarch64/gateway_split_demo/: inventory.json  plan.json
build-aarch64/stress_8rs485/: device_stress_rs485_1_modbus.json  device_stress_rs485_2_modbus.json  device_stress_rs485_3_modbus.json  device_stress_rs485_4_modbus.json  device_stress_rs485_5_modbus.json  device_stress_rs485_6_modbus.json  device_stress_rs485_7_modbus.json  device_stress_rs485_8_dlt645.json  mqtt-service-stress-8rs485.json
config/: README.md
config/examples/: ADF400L.json  camera-service-public-example.json  device_can0_example.json  device_compute_global.json  device_iec101_example.json  device_iec103_serial_example.json  device_iec103_tcp_example.json  device_iec104_example.json  gateway_split_inventory_example.json  local-display-qt-ems-example.json  mqtt-service-compute-example.json  mqtt-service-graph-ems-example.json  mqtt-service-legacy-ems-example.json  shuntong_ems_graph.json
config/factory/: README.md
config/runtime/: device_identity.json
config/templates/: dlt645_2007_standard_points.json
deploy/: 10-gateway-watchdog.conf  batch-init-devices.sh  build-factory-package.sh  camera-service@.service  can-driver@.service  compute-engine@.service  devices.example.csv  dio-driver@.service  direct-agent@.service  dlt645-driver@.service  event-engine@.service  gateway-run.sh  gateway-services.service  gateway-services.sh  gateway-tls-enroll.sh  iec-driver@.service  install-factory-config.sh  local-display@.service  local-kiosk.py  local-kiosk@.service  modbus-rtu@.service  mqtt-driver@.service  mqtt-tls-tunnel@.service  ota-apply.sh  ota-rollback.sh  production-init.sh  production-smoke-test.sh  qt-display-bridge.service  system-monitor@.service
doc/: CAN接口接入设计.md  IEC101_103_104接入设计.md  ZLMediaKit平台媒体服务接入教程.md  gateway_merged_document.md  legacy-ems-index-mapping.md  qt-ems-local-display-poc.md  共享内存同步设计.md  北向Modbus映射服务.md  升级回滚脚本参考.md  压测工具说明.md  图形化EMS逻辑配置设计.md  多核优化方案.md  寄存器协议网络模式支持.md  平台实时监测设计.md  平台配置页面说明.md  应用配置.md  性能容量压测报告.md  摄像头接入推流设计.md  文档索引.md  断链缓存补传设计.md  本机DIDO接入设计.md  消息样例.md  消息驱动说明.md  生产上线检查清单.md  生产验收冒烟测试.md  电表协议接入方案.md  电表协议标准点表说明.md  电表协议运行测试.md  硬件接口与路由设计.md  系统监测与诊断设计.md  网关拆分规划器.md  网关集成设计总览.md  自定义计算服务设计.md  舜通旧script逻辑完整解析.md  边端MQTT TLS接入说明.md  边端操作手册.md  边端部署说明.md  运行配置样例.md  部署脚本参考.md  配置升级下发设计.md  (+5 more)
doc/EMS与本地画面/: KY-EMS本地界面说明.md  图形化EMS逻辑配置设计.md  边端本地画面展示设计.md
doc/交叉编译教程/: 192.168.22.11边端交叉编译教程.md
doc/协议与驱动/: CAN接口接入设计.md  IEC101_103_104接入设计.md  寄存器协议网络模式支持.md  电表协议接入方案.md  电表协议标准点表说明.md  电表协议运行测试.md
doc/媒体服务/: ZLMediaKit平台媒体服务接入教程.md  摄像头接入推流设计.md
doc/平台联动/: 平台实时监测设计.md  网关拆分规划器.md
doc/性能压测/: 压测工具说明.md  性能容量压测报告.md
doc/架构设计/: 共享内存同步设计.md  硬件接口与路由设计.md  系统监测与诊断设计.md  网关标识设计.md  网关集成设计总览.md
doc/部署运维/: 生产验收冒烟测试.md  边端部署说明.md  部署脚本参考.md
doc/配置与消息/: 应用配置.md  消息驱动说明.md  配置升级下发设计.md  配置升级端到端测试.md  配置字段说明.md
doc/需求说明/: KY-EMS点位绑定迁移说明.md
include/edge_gateway/: alarm_service.hpp  builtin_mqtt_driver_publisher.hpp  can_driver_service.hpp  can_signal_codec.hpp  collector.hpp  command_executor.hpp  command_executor_interface.hpp  compat.hpp  compute_engine_service.hpp  config_loader.hpp  dio_collector.hpp  dio_command_executor.hpp  direct_agent_embedded.hpp  dlt645_client.hpp  dlt645_codec.hpp  (+36 more)
src/: alarm_service.cpp  builtin_mqtt_driver_publisher.cpp  can_driver_service.cpp  can_signal_codec.cpp  collector.cpp  collector_base.cpp  command_executor.cpp  compute_engine_service.cpp  config_loader.cpp  dio_collector.cpp  dio_command_executor.cpp  dlt645_client.cpp  dlt645_codec.cpp  dlt645_collector.cpp  dlt645_standard_points_loader.cpp  event_engine_service.cpp  gateway_daemon.cpp  gateway_daemon_modbus.cpp  graph_ems_engine.cpp  iec_client.cpp  iec_codec.cpp  iec_collector.cpp  iec_command_executor.cpp  legacy_ems_engine.cpp  legacy_ems_point_catalog.cpp  memory_point_store.cpp  mock_serial_port.cpp  modbus_codec.cpp  modbus_northbound_server.cpp  modbus_rtu_client.cpp  modbus_tcp_client.cpp  mosquitto_mqtt_driver_publisher.cpp  mqtt_driver_service.cpp  mqtt_event_outbox.cpp  mqtt_realtime_ring_buffer.cpp  ota_service.cpp  point_store_router.cpp  posix_serial_port.cpp  priority_control_lease.cpp  read_task_planner.cpp  (+5 more)
tmp_stress_bin/: EventEngine  EventEngine_next  EventEngine_priority  EventEngine_retry  EventEngine_shmfix  EventEngine_stats  EventEngine_stopfix  MqttDriver_next  MqttDriver_priority  MqttDriver_prod  MqttDriver_retry  MqttDriver_shmfix  MqttDriver_stats  MqttDriver_stopfix  stress_runner  stress_runner_retry  stress_runner_shmfix
tmpdeploy/: EventEngine  ModbusRtu  MqttDriver  SystemMonitor
toolchains/: aarch64-linux-gnu.cmake
tools/: build_edge_aarch64.sh  builtin_mqtt_driver_publisher_test.cpp  can_signal_codec_test.cpp  collector_partial_failure_test.cpp  config_loader_test.cpp  convert_comm_manager_xlsm.py  dio_smoke_test.cpp  dlt645_client_interval_test.cpp  gateway_daemon_realtime_priority_test.cpp  gateway_inventory_builder.py  gateway_plan_materializer.py  gateway_split_planner.py  iec104_client_integration_test.cpp  iec_codec_test.cpp  legacy_ems_test.cpp  memory_point_store_lifecycle_test.cpp  modbus_northbound_server_test.cpp  modbus_rtu_client_resync_test.cpp  modbus_tcp_client_limit_test.cpp  mqtt_driver_service_test.cpp  ota_service_test.cpp  pointctl.cpp  priority_control_lease_test.cpp  stress_runner.cpp  system_monitor_service_test.cpp
(+49 files in other folders)
